compliance-automation/bad-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-app
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      runAsUser: 0
      privileged: true
